# 2048_rl_exp

./: .gitignore
environments/env_2048_single_turn/: env_2048_single_turn.py  eval_ckpt.sh  pyproject.toml
environments/env_2048_single_turn/configs/: rl.toml
environments/env_2048_text/: PITFALLS.md  README.md  env_2048_text.py  pyproject.toml  test_env.py
environments/env_2048_text/configs/: efficiency.toml  max_tile.toml  rl.toml  valid_moves.toml
